[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/NPC/Enemies/Pawn/EnemyPawn.gd" type="Script" id=1]
[ext_resource path="res://Entities/NPC/Enemies/Pawn/straightGun.gd" type="Script" id=2]
[ext_resource path="res://Entities/NPC/Enemies/Pawn/Pawn_Sprites.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Entities/Entity/Entity.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/NPC/Enemies/Pawn/Pawn_Collision.tres" type="Shape2D" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.760784, 0.760784, 1 ), Color( 1, 0.760784, 0.760784, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 5.0, 0.0 ]
}

[node name="EnemyPawn" instance=ExtResource( 4 )]
position = Vector2( 0, 0 )
script = ExtResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityNotifier2D" parent="." index="0"]
position = Vector2( 0, 33 )

[node name="EntityCollisionDetector" parent="." index="1"]
collision_layer = 2
collision_mask = 20

[node name="EntityPhysicsShape" parent="EntityCollisionDetector" index="0"]
position = Vector2( 0.5, 17.5 )
z_index = 2
shape = ExtResource( 6 )

[node name="EntitySprite" parent="." index="2"]
z_index = 1
frames = ExtResource( 3 )
animation = "pawn"

[node name="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 1 )
anims/hit = SubResource( 2 )

[node name="Gun" type="Node2D" parent="." index="4"]

[node name="straightGun" type="Node2D" parent="Gun" index="0"]
script = ExtResource( 2 )

[node name="Spawners" type="Node2D" parent="Gun/straightGun" index="0"]

[node name="Position2D" type="Position2D" parent="Gun/straightGun/Spawners" index="0"]
position = Vector2( 0, 50 )

[node name="gunTimer" type="Timer" parent="Gun" index="1"]
wait_time = 0.75

[node name="RichTextLabel" type="RichTextLabel" parent="." index="5"]
margin_left = 15.0
margin_top = -52.0
margin_right = 55.0
margin_bottom = -12.0
text = "Num"

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="area_entered" from="EntityCollisionDetector" to="." method="_on_EntityCollisionDetector_area_entered"]
[connection signal="timeout" from="Gun/gunTimer" to="Gun/straightGun" method="_on_gunTimer_timeout"]
